structure and make file don, go code

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -37,9 +37,7 @@ SRCS	=	ft_isalpha.c \
 			ft_putendl_fd.c \
 			ft_putnbr_fd.c 
 
-OBJS	= ${SRCS:.c=.o}
-
-SRCS_BONUS =	${SRCS:.c=.o} \
+SRCS_BONUS =	$(SRCS) \
 				ft_lstnew_bonus.c \
 				ft_lstadd_front_bonus.c \
 				ft_lstsize_bonus.c \
@@ -50,10 +48,10 @@ SRCS_BONUS =	${SRCS:.c=.o} \
 				ft_lstiter_bonus.c \
 				ft_lstmap_bonus.c
 
+OBJS	= ${SRCS:.c=.o}
 OBJS_BONUS	= ${SRCS_BONUS:.c=.o}
 
 NAME	= libft.a
-BONUS	= bonus
 
 RM		= rm -f
 
@@ -61,7 +59,7 @@ $(NAME):	$(OBJS)
 			ar rc $(NAME) $(OBJS)
 			ranlib $(NAME)
 
-$(BONUS):	$(OBJS_BONUS)
+bonus:		$(OBJS_BONUS)
 			ar rc $(NAME) $(OBJS_BONUS)
 			ranlib $(NAME)
 
@@ -75,4 +73,4 @@ clean:
 fclean:		clean
 			$(RM) $(NAME)
 
-.PHONY:		all re clean fclean bin
+.PHONY:		all re clean fclean bin bonus
