--- a/libft/Makefile
+++ b/libft/Makefile
@@ -12,8 +12,8 @@ SRCS	=	ft_isalpha.c \
 			ft_bzero.c \
 			ft_memcpy.c \
 			ft_memmove.c \
-			ft_strlcpy.c \
-			ft_strlcat.c \
+			ft_strcpy.c \
+			ft_strcat.c \
 			ft_tolower.c \
 			ft_toupper.c \
 			ft_strchr.c \
@@ -32,24 +32,21 @@ SRCS	=	ft_isalpha.c \
 			ft_itoa.c \
 			ft_strmapi.c \
 			ft_striteri.c \
-			ft_putchar_fd.c \
-			ft_putstr_fd.c \
-			ft_putendl_fd.c \
-			ft_putnbr_fd.c 
-
-SRCS_BONUS =	$(SRCS) \
-				ft_lstnew_bonus.c \
-				ft_lstadd_front_bonus.c \
-				ft_lstsize_bonus.c \
-				ft_lstlast_bonus.c \
-				ft_lstadd_back_bonus.c \
-				ft_lstdelone_bonus.c \
-				ft_lstclear_bonus.c \
-				ft_lstiter_bonus.c \
-				ft_lstmap_bonus.c
+			ft_putchar.c \
+			ft_putstr.c \
+			ft_putendl.c \
+			ft_putnbr.c \
+			ft_lstnew_bonus.c \
+			ft_lstadd_front_bonus.c \
+			ft_lstsize_bonus.c \
+			ft_lstlast_bonus.c \
+			ft_lstadd_back_bonus.c \
+			ft_lstdelone_bonus.c \
+			ft_lstclear_bonus.c \
+			ft_lstiter_bonus.c \
+			ft_lstmap_bonus.c
 
 OBJS	= ${SRCS:.c=.o}
-OBJS_BONUS	= ${SRCS_BONUS:.c=.o}
 
 NAME	= libft.a
 
@@ -57,10 +54,6 @@ RM		= rm -f
 
 $(NAME):	$(OBJS)
 			ar rc $(NAME) $(OBJS)
-			ranlib $(NAME)
-
-bonus:		$(OBJS_BONUS)
-			ar rc $(NAME) $(OBJS_BONUS)
 			ranlib $(NAME)
 
 all:		$(NAME)
@@ -73,4 +66,14 @@ clean:
 fclean:		clean
 			$(RM) $(NAME)
 
-.PHONY:		all re clean fclean bin bonus
+test:		$(OBJS)
+			$(CC) $(CFLAGS) -o test $(OBJS) test.c
+			./test
+
+cleantest :	
+			rm -f test
+
+retest:		cleantest test
+
+
+.PHONY:		all re clean fclean bin cleantest
