--- a/libft/Makefile
+++ b/libft/Makefile
@@ -30,6 +30,7 @@ SRCS	=	ft_isalpha.c \
 			ft_strtrim.c \
 			ft_split.c \
 			ft_itoa.c \
+			ft_ultoa.c \
 			ft_uitoa.c \
 			ft_strmapi.c \
 			ft_striteri.c \
