--- a/libft/Makefile
+++ b/libft/Makefile
@@ -7,44 +7,44 @@ SRCS	=	printf/ft_flag_process.c \
 			printf/ft_type_process.c \
 			printf/ft_type_process2.c \
 			printf/ft_printf_utils.c \
-			ft_printf.c \
-			ft_isalpha.c \
-			ft_isdigit.c \
-			ft_isalnum.c \
-			ft_isascii.c \
-			ft_isprint.c \
-			ft_strlen.c \
-			ft_memset.c \
-			ft_bzero.c \
-			ft_memcpy.c \
-			ft_memmove.c \
-			ft_strcpy.c \
-			ft_strcat.c \
-			ft_tolower.c \
-			ft_toupper.c \
-			ft_strchr.c \
-			ft_strrchr.c \
-			ft_strncmp.c \
-			ft_memchr.c \
-			ft_memcmp.c \
-			ft_strnstr.c \
-			ft_atoi.c \
-			ft_calloc.c \
-			ft_strdup.c \
-			ft_substr.c \
-			ft_strjoin.c \
-			ft_strtrim.c \
-			ft_split.c \
-			ft_itoa.c \
-			ft_ultoa.c \
-			ft_uitoa.c \
-			ft_strmapi.c \
-			ft_striteri.c \
-			ft_putchar.c \
-			ft_putstr.c \
-			ft_putendl.c \
-			ft_putnbr.c \
-			ft_putnbr_base.c \
+			printf/ft_printf.c \
+			ftc/ft_isalpha.c \
+			ftc/ft_isdigit.c \
+			ftc/ft_isalnum.c \
+			ftc/ft_isascii.c \
+			ftc/ft_isprint.c \
+			ftc/ft_strlen.c \
+			ftc/ft_memset.c \
+			ftc/ft_bzero.c \
+			ftc/ft_memcpy.c \
+			ftc/ft_memmove.c \
+			ftc/ft_strcpy.c \
+			ftc/ft_strcat.c \
+			ftc/ft_tolower.c \
+			ftc/ft_toupper.c \
+			ftc/ft_strchr.c \
+			ftc/ft_strrchr.c \
+			ftc/ft_strncmp.c \
+			ftc/ft_memchr.c \
+			ftc/ft_memcmp.c \
+			ftc/ft_strnstr.c \
+			ftc/ft_atoi.c \
+			ftc/ft_calloc.c \
+			ftc/ft_strdup.c \
+			ftc/ft_substr.c \
+			ftc/ft_strjoin.c \
+			ftc/ft_strtrim.c \
+			ftc/ft_split.c \
+			ftc/ft_itoa.c \
+			ftc/ft_ultoa.c \
+			ftc/ft_uitoa.c \
+			ftc/ft_strmapi.c \
+			ftc/ft_striteri.c \
+			ftc/ft_putchar.c \
+			ftc/ft_putstr.c \
+			ftc/ft_putendl.c \
+			ftc/ft_putnbr.c \
+			ftc/ft_putnbr_base.c \
 			lst/ft_lstnew.c \
 			lst/ft_lstadd_front.c \
 			lst/ft_lstsize.c \
@@ -74,7 +74,7 @@ all:		$(NAME)
 re:			fclean $(NAME)
 
 clean:		
-			$(RM) *.o
+			$(RM) *.o ftc/*.o printf/*.o lst/*.o dlst/*.o
 
 fclean:		clean
 			$(RM) $(NAME)
