--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,8 @@
                 "src/ft_ps_operations.c",
                 "src/ft_ps_process.c",
                 "src/ft_ps_utils.c",
+                "src/ft_ps_solve.c",
+                "src/ft_ps_solve_big.c",
                 "ft_push_swap.c",
                 "-L",
                 "./libft",
