--- a/libft/Makefile
+++ b/libft/Makefile
@@ -71,18 +71,27 @@ NAME	= libft.a
 
 RM		= rm -f
 
+_GREEN=\e[32m
+_YELLOW=\e[33m
+_CYAN=\e[36m
+_END=\e[0m
+
 $(NAME):	$(OBJS)
-			ar rc $(NAME) $(OBJS)
-			ranlib $(NAME)
+			@printf "Libft Objects	[$(_GREEN)✓$(_END)]\n"
+			@ar rc $(NAME) $(OBJS)
+			@ranlib $(NAME)
+			@printf "Libft		[$(_GREEN)✓$(_END)]\n"
 
 all:		$(NAME)
 
 re:			fclean $(NAME)
 
 clean:		
-			$(RM) *.o ftc/*.o printf/*.o lst/*.o dlst/*.o
+			@$(RM) *.o ftc/*.o printf/*.o lst/*.o dlst/*.o
+			@printf "$(_YELLOW)libft object	deleted$(_END)\n"
 
 fclean:		clean
-			$(RM) $(NAME)
+			@$(RM) $(NAME)
+			@printf "$(_YELLOW)libft		deleted$(_END)\n"
 
 .PHONY:		all re clean fclean bin cleantest test
