--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"ft_printf.h": "c",
 		"libft.h": "c",
-		"ft_push_swap.h": "c"
+		"ft_push_swap.h": "c",
+		"iterator": "c",
+		"functional": "c"
 	}
 }
